Through PUT example

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>My App</title>
+	<script src="main.js"></script>
 </head>
 <body>
 	<h2>And the quotes are...</h2>
@@ -14,6 +15,12 @@
 		</li>
 		<% } %>
 	</ul>
+
+	<hr>
+	<div>
+		<h2>Replace last qute written by Yoda with a quote written by Darth Vadar</h2>
+		<button id='update'> Darth Vadar invades! </button>
+	</div>
 
 	<hr>
 
