Finished with tutorial

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,8 +18,14 @@
 
 	<hr>
 	<div>
-		<h2>Replace last qute written by Yoda with a quote written by Darth Vadar</h2>
+		<h2>Replace last quote written by Yoda with a quote written by Darth Vadar</h2>
 		<button id='update'> Darth Vadar invades! </button>
+	</div>
+
+	<hr>
+	<div>
+		<h2>Delete first Darth Vadar quote</h2>
+		<button id='delete'> Delete Darth Vadar's first quote </button>
 	</div>
 
 	<hr>
